# capsule-server

./: .gitignore
backend-api/: .env.example  .eslintrc.js  .gitignore  .prettierrc  BACKEND_API_ROADMAP.md  CLAUDE.md  package-lock.json  package.json  tsconfig.json
capsulex-program/: Anchor.toml  SEMANTIC_INTEGRATION.md  client-validation.ts  package.json  pnpm-lock.yaml
capsulex-program/programs/capsulex-program/: Cargo.toml
capsulex-program/programs/capsulex-program/_src_backup/: lib.rs
capsulex-program/programs/capsulex-program/src/: constants.rs  errors.rs  lib.rs  state.rs
capsulex-program/programs/capsulex-program/src/instructions/: capsule.rs  game.rs  leaderboard.rs  mod.rs  nft.rs
docs/: ANCHOR_PROGRAM_SUMMARY.md  CapsuleXImplementation.md  CapsuleX_Game_Specification.md  CapsuleX_Pitch_Deck.md  FEATURES.md  FINAL_ONRAMP_STRATEGY.md  FlowArchitecture-capsulex  GAMIFICATION_IMPLEMENTATION_PLAN.md  MONETIZATION_STRATEGY.md  NFT_SYSTEM.md  README.md  REALISTIC_SUPABASE_SETUP.md  SEMANTIC_INTEGRATION.md  SETUP_CHECKLIST.md  SUPABASE_SETUP_GUIDE.md  (+6 more)
semantic-service/: .gitignore  ANALYSIS_JOURNEY.md  EVAL_PLAN.md  README.md  api.http  app-hybrid.py  app-minimal.py  app.py  capsuleX_semantic_dataset.json  capsuleX_semantic_dataset_v2.json  eval_framework.py  evaluation_report.md  evaluation_results.csv  gunicorn.conf.py  nixpacks.toml  oracle_private_key.pem  pyproject.toml  railway.json  render.yaml  requirements-cpu.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  start.sh  test_dataset.json  test_gpt4o_direct.py  test_service.py
(+49 files in other folders)
