[project]
name = "capsulex-semantic-service"
version = "0.1.0"
description = "Semantic answer checking service for CapsuleX game"
authors = [{name = "CapsuleX Team"}]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "scikit-learn>=1.3.0",
    "gunicorn>=21.2.0",
    "cryptography>=45.0.5",
    "emoji>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
]

# Don't package as installable - it's a simple script
[tool.hatch.build.targets.wheel]
packages = []
